@startuml ViewModelDataAccessRelationship
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #F0F0F0
skinparam classBorderColor #333333
skinparam arrowColor #333333

package "VIEWMODEL LAYER" {
    class CountryViewModel {
        - crudService: CrudService
        --
        + LoadAsync(): Task
        + SaveAsync(): Task
        + DeleteAsync(): Task
    }
    
    class ChampionshipViewModel {
        - crudService: CrudService
        --
        + LoadAsync(): Task
        + SaveAsync(): Task
        + DeleteAsync(): Task
    }
    
    class MatchViewModel {
        - crudService: CrudService
        --
        + LoadAsync(): Task
        + SaveAsync(): Task
        + DeleteAsync(): Task
    }
    
    class StatisticsViewModel {
        - statisticsService: StatisticsService
        --
        + LoadStatisticsAsync(): Task
    }
}

package "BUSINESS LOGIC LAYER" {
    class CrudService {
        - countryRepository: ICountryRepository
        - championshipRepository: IChampionshipRepository
        - matchRepository: IMatchRepository
        --
        + SaveCountryAsync(Country): Task
        + DeleteCountryAsync(int): Task
        + SaveChampionshipAsync(Championship): Task
        + SaveMatchAsync(Match): Task
    }
    
    class StatisticsService {
        - goalRepository: IGoalRepository
        - matchRepository: IMatchRepository
        - championshipRepository: IChampionshipRepository
        - goalTypeRepository: IGoalTypeRepository
        --
        + GetTopScorersAsync(int): Task<List>
        + GetGoalsByTypeAsync(): Task<List>
        + GetMatchesByChampionshipAsync(): Task<List>
        + GetTeamStatisticsAsync(): Task<List>
    }
}

package "DATA ACCESS LAYER" {
    interface ICountryRepository {
        + GetAllAsync(): Task<List>
        + GetByIdAsync(int): Task
        + AddAsync(Country): Task
        + UpdateAsync(Country): Task
        + DeleteAsync(int): Task
    }
    
    interface IChampionshipRepository {
        + GetAllAsync(): Task<List>
        + GetByIdAsync(int): Task
        + AddAsync(Championship): Task
        + UpdateAsync(Championship): Task
        + DeleteAsync(int): Task
    }
    
    interface IMatchRepository {
        + GetAllAsync(): Task<List>
        + GetByIdAsync(int): Task
        + AddAsync(Match): Task
        + UpdateAsync(Match): Task
        + DeleteAsync(int): Task
    }
    
    interface IGoalRepository {
        + GetAllAsync(): Task<List>
        + GetByIdAsync(int): Task
        + AddAsync(Goal): Task
        + UpdateAsync(Goal): Task
        + DeleteAsync(int): Task
    }
    
    interface IGoalTypeRepository {
        + GetAllAsync(): Task<List>
        + GetByIdAsync(int): Task
        + AddAsync(GoalType): Task
        + UpdateAsync(GoalType): Task
        + DeleteAsync(int): Task
    }
}

CountryViewModel --> CrudService : Calls
ChampionshipViewModel --> CrudService : Calls
MatchViewModel --> CrudService : Calls
StatisticsViewModel --> StatisticsService : Calls

CrudService --> ICountryRepository : Uses
CrudService --> IChampionshipRepository : Uses
CrudService --> IMatchRepository : Uses

StatisticsService --> IGoalRepository : Uses
StatisticsService --> IMatchRepository : Uses
StatisticsService --> IChampionshipRepository : Uses
StatisticsService --> IGoalTypeRepository : Uses

@enduml
